Bump minimum Java to v9 and implement new APIs.
Closes #26
Closes #28